tests/NormalTests/paczka1/small_fuzzy/11933940.err
Error in line 1: rynzCM68z2B S632 50,6
Error in line 4: S340 S340 4,2
Error in line 2: rynzCM68z2B A216 18,0
